[tool.poetry]
name = "prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["Josip Mrden <josip.mrden@memgraph.io>"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.16.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
